[package]
name = "carakale"
version = "0.1.0"
edition = "2024"

[dependencies]
base64 = "0.22.1"
hex = "0.4.3"
rand = "0.9.2"
rayon = "1.11.0"
tiny-keccak = { version = "2.0.2", features = ["keccak"] }

[profile.release]
codegen-units = 1
lto = true
panic = "abort"

[target.'cfg(target_arch = "aarch64")']
rustflags = ["-C", "target-cpu=native"]
