[package]
name = "carakale"
version = "0.1.0"
edition = "2024"

[dependencies]
base64 = "0.22.1"
crossterm = "0.29.0"
hex = "0.4.3"
rand = "0.9.2"
ratatui = "0.29.0"
rayon = "1.11.0"
tiny-keccak = { version = "2.0.2", features = ["keccak"] }

# GPU dependencies (optional)
bytemuck = { version = "1.23.2", optional = true }
env_logger = { version = "0.11.8", optional = true }
pollster = { version = "0.4.0", optional = true }
wgpu = { version = "26.0.1", optional = true }

[features]
default = []
gpu = ["bytemuck", "env_logger", "pollster", "wgpu"]

[profile.release]
codegen-units = 1
lto = true
panic = "abort"
